src/objects/Trade_Ally_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Trade Ally Insurance</relationshipLabel>
        <relationshipName>Trade_Ally_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <referenceTo>Insurance__c</referenceTo>
        <relationshipLabel>Trade Ally Insurance</relationshipLabel>
        <relationshipName>Trade_Ally_Insurance</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Ally__c</fullName>
        <label>Trade Ally</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Trade Ally</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trade Ally</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Ally Insurance</relationshipLabel>
        <relationshipName>Trade_Ally_Insurance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Trade Ally Insurance</label>
    <nameField>
        <displayFormat>TAIN-{000000}</displayFormat>
        <label>Trade Ally Insurance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Ally Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>